# fusi_legacy

./: pyproject.toml
fusilib/: allen.py  config.py  handler.py  handler2.py  utils.py
fusilib/extras/: stats.py
fusilib/io/: dlc.py  events.py  phy.py  spikeglx.py  spikes.py
src/fusilib/: __init__.py  align.py  experiments.py  metahelper.py  misc.py  resampling.py
src/fusilib/extras/: readers.py
src/fusilib/io/: __init__.py  lfp.py  logs.py  putative.py  righw.py  spikes2.py  sync.py
