[project]
name = "fusilib"
version = "0.1.0"
description = "Add your description here"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "allensdk>=0.16.3",
    "h5py>=3.14.0",
    "matplotlib>=3.9.4",
    "nibabel>=5.3.2",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scipy>=1.13.1",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
